# Job-Scraper

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  scraper.py  server.py  test_queries.py  test_scraper.py  test_server.py
templates/: index.html
